Added xGraph library and made it plot the idleness

--- a/Assets/Scripts/CustomScriptsAssembly.asmdef
+++ b/Assets/Scripts/CustomScriptsAssembly.asmdef
@@ -9,7 +9,8 @@
         "GUID:5db6cbfd5d0e86a46862a70f4b4067f2",
         "GUID:1da8e23352f14494396eac5033ba9894",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:6a9ab44e5e0403d4ebaf2dee2f9f1172"
+        "GUID:6a9ab44e5e0403d4ebaf2dee2f9f1172",
+        "GUID:dd8043639e4014317a7246f064330196"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
